--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Build data files
 
 on:
   push:
@@ -48,3 +48,8 @@ jobs:
 
     - name: Generate geospatial data
       run: node scripts/kml-to-geojson.mjs
+
+    - uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: ':robot: build data files'
+        branch: ${{ github.ref }}
