--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ on:
 
 jobs:
   build:
+    permissions:
+      contents: write
 
     runs-on: ubuntu-latest
 
@@ -52,4 +54,4 @@ jobs:
     - uses: stefanzweifel/git-auto-commit-action@v5
       with:
         commit_message: ':robot: build data files'
-        branch: ${{ github.ref }}
+        branch: master
