--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,9 @@ jobs:
     - name: Generate station codes
       run: node scripts/generate-rail-station-codes.mjs
 
+    - name: Generate station codes
+      run: node scripts/generate-stop-overrides.mjs
+
     - name: Generate geospatial data
       run: node scripts/kml-to-geojson.mjs
 
