--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tmcw/togeojson": "^5.8.1",
+    "@turf/nearest-point": "^7.1.0",
     "@xmldom/xmldom": "^0.8.10",
     "csv-reader": "^1.0.12",
     "geojson-validation": "^1.0.2",
