--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tmcw/togeojson": "^5.8.1",
     "@turf/distance": "^7.1.0",
+    "@turf/intersect": "^7.2.0",
     "@turf/nearest-point": "^7.1.0",
     "@xmldom/xmldom": "^0.8.10",
     "csv-reader": "^1.0.12",
