--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tmcw/togeojson": "^5.8.1",
+    "@transportme/transportvic-utils": "^1.0.4",
     "@turf/distance": "^7.1.0",
     "@turf/intersect": "^7.2.0",
     "@turf/nearest-point": "^7.1.0",
