--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@xmldom/xmldom": "^0.8.10",
     "csv-reader": "^1.0.12",
     "geojson-validation": "^1.0.2",
+    "node-fetch": "^3.3.2",
     "read-excel-file": "^5.8.2"
   }
 }
